database updated for heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,8 +22,11 @@ test: &test
   database: deals_test
 
 production:
-  <<: *default
-  database: deals_production
-
-cucumber:
-  <<: *test
+  adapter: postgresql
+  pool: 5
+  timeout: 5000
+  username: btcnwffglpxemh
+  password: gU6r2ip4OGJM4JmZG7koN5K7Pv
+  database: dajuov22mvtg4k
+  host: ec2-54-225-182-133.compute-1.amazonaws.com
+  port: 5432
