fix dokku config for technikality.info

--- a/config/database.yml
+++ b/config/database.yml
@@ -32,6 +32,4 @@ dokku:
   adapter: <%= ENV['DB_SCHEME'] %>
   pool: 5
   timeout: 5000
-  url: <%= ENV['DB_PATH'] %>
-  username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
