- change the queue to default queue

--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -1,17 +1,17 @@
 countdown_fetcher_10:
   cron: "00 10 * * *"
-  queue: countdown
+  queue: default
   class: CountdownJob
   description: "Fetch prices from countdown"
 
 countdown_fetcher_17:
   cron: "00 17 * * *"
-  queue: countdown
+  queue: default
   class: CountdownJob
   description: "Fetch prices from countdown"
 
 sitemap:
   cron: "00 13 * * *"
-  queue: sitemap
+  queue: default
   class: SitemapJob
   description: "Refresh Sitemap"
