- finish job scheduled

--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -4,11 +4,23 @@ countdown_fetcher_10:
   class: CountdownJob
   description: "Fetch prices from countdown"
 
+countdown_finish_10:
+  cron: "30 13 * * *"
+  queue: countdown
+  class: CountdownFinishJob
+  description: "Finish fetch prices from countdown"
+
 countdown_fetcher_17:
   cron: "00 17 * * *"
   queue: countdown
   class: CountdownJob
   description: "Fetch prices from countdown"
+
+countdown_finish_17:
+  cron: "30 20 * * *"
+  queue: countdown
+  class: CountdownFinishJob
+  description: "Finish fetch prices from countdown"
 
 sitemap:
   cron: "00 13 * * *"
