--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,71 @@
-upstream rhebok_server {
-  server unix:/tmp/rhebok.sock fail_timeout=0;
+daemon off;
+
+http {
+  upstream rhebok_server {
+    server unix:/tmp/rhebok.sock fail_timeout=0;
+  }
+
+  server {
+    listen 5000;
+
+    try_files $uri @rhebok_server;
+
+    access_log /dev/stdout;
+    error_log /dev/stdout;
+
+    rewrite ^(/javascripts/)(.*)$ /assets/$2 last;
+    rewrite ^(/stylesheets/)(.*)$ /assets/$2 last;
+
+    location @rhebok_server {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      #proxy_set_header X-Forwarded-Proto https; # if use ssl
+      proxy_redirect off;
+      proxy_pass http://rhebok_server;
+
+      proxy_connect_timeout 300;
+      proxy_read_timeout    300;
+      proxy_send_timeout    300;
+    }
+
+    location ~* ^/assets/peek/ {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      #proxy_set_header X-Forwarded-Proto https; # if use ssl
+      proxy_redirect off;
+      proxy_pass http://rhebok_server;
+
+      proxy_connect_timeout 300;
+      proxy_read_timeout    300;
+      proxy_send_timeout    300;
+    }
+
+    location ~* ^/(assets|javascripts|stylesheets)/ {
+      include       /etc/nginx/mime.types;
+      root /app/public;
+      gzip_static on;
+      expires 10;
+      add_header Cache-Control public;
+
+      open_file_cache max=1000 inactive=500s;
+      open_file_cache_valid 600s;
+      open_file_cache_errors on;
+    }
+
+    location ~* ^/*.(ico|png)$ {
+      include       /etc/nginx/mime.types;
+      root /app/public;
+      gzip_static on;
+      expires 10;
+      add_header Cache-Control public;
+
+      open_file_cache max=1000 inactive=500s;
+      open_file_cache_valid 600s;
+      open_file_cache_errors on;
+    }
+  }
 }
 
-server {
-  listen ${HTTP_PORT};
-
-  root /app/public;
-  try_files $uri @rhebok_server;
-
-  access_log /dev/stdout;
-  error_log /dev/stdout info;
-
-  location @rhebok_server {
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-    #proxy_set_header X-Forwarded-Proto https; # if use ssl
-    proxy_redirect off;
-    proxy_pass http://rhebok_server;
-  }
-
-  location ~ ^\/(assets|images|javascripts|stylesheets|swfs|system)\/ {
-    gzip_static on;
-    expires max;
-    add_header Cache-Control public;
-    add_header Last-Modified "";
-    add_header ETag "";
-
-    open_file_cache max=1000 inactive=500s;
-    open_file_cache_valid 600s;
-    open_file_cache_errors on;
-    break;
-  }
+events {
+  worker_connections 4000;
 }
