- use puma instead of rhebok, rhebok clash with sidekiq web

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,27 +1,24 @@
 daemon off;
 
 http {
-  upstream rhebok_server {
-    server unix:/tmp/rhebok.sock fail_timeout=0;
+  upstream puma_server {
+    server unix:/tmp/puma.sock fail_timeout=0;
   }
 
   server {
     listen 5000;
 
-    try_files $uri @rhebok_server;
+    try_files $uri @puma_server;
 
     access_log /dev/stdout;
     error_log /dev/stdout;
 
-    rewrite ^(/javascripts/)(.*)$ /assets/$2 last;
-    rewrite ^(/stylesheets/)(.*)$ /assets/$2 last;
-
-    location @rhebok_server {
+    location @puma_server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       #proxy_set_header X-Forwarded-Proto https; # if use ssl
       proxy_redirect off;
-      proxy_pass http://rhebok_server;
+      proxy_pass http://puma_server;
 
       proxy_connect_timeout 300;
       proxy_read_timeout    300;
@@ -33,14 +30,26 @@ http {
       proxy_set_header Host $http_host;
       #proxy_set_header X-Forwarded-Proto https; # if use ssl
       proxy_redirect off;
-      proxy_pass http://rhebok_server;
+      proxy_pass http://puma_server;
 
       proxy_connect_timeout 300;
       proxy_read_timeout    300;
       proxy_send_timeout    300;
     }
 
-    location ~* ^/(assets|javascripts|stylesheets)/ {
+    location ~* ^/sidekiq {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      #proxy_set_header X-Forwarded-Proto https; # if use ssl
+      proxy_redirect off;
+      proxy_pass http://puma_server;
+
+      proxy_connect_timeout 300;
+      proxy_read_timeout    300;
+      proxy_send_timeout    300;
+    }
+
+    location ~* ^/assets/ {
       include       /etc/nginx/mime.types;
       root /app/public;
       gzip_static on;
