--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,8 @@ http {
       proxy_connect_timeout 300;
       proxy_read_timeout    300;
       proxy_send_timeout    300;
+      fastcgi_buffers 16 16k; 
+      fastcgi_buffer_size 32k;
     }
 
     location ~* ^/assets/peek/ {
